--- a/assets/css/global/utils.css
+++ b/assets/css/global/utils.css
@@ -40,10 +40,16 @@
   padding-bottom: 1em;
 }
 
+.max-width-sm{
+  max-width: 640px;
+  margin: auto;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
+
 
 .mx-0{
   margin-left: 0;
@@ -55,6 +61,9 @@
   margin-bottom: .5rem;
 }
 
+.mb-0\.25 {
+  margin-bottom: 0.25rem;
+}
 
 .mb-1 {
   margin-bottom: 1rem;
@@ -62,6 +71,10 @@
 
 .myx-2{
   margin: 2rem;
+}
+
+.mb-2{
+  margin-bottom: 2rem;
 }
 
 .text-primary-regular {
@@ -96,13 +109,23 @@
   flex-direction: column;
 }
 
+/* .fg-center{
+  align-items: center;
+  justify-content: center;
+} */
+
 .gap-0\.5 {
   gap: 0.5rem;
+}
+
+.gap-2 {
+  gap: 2rem;
 }
 
 .uppercase{
   text-transform: uppercase;
 }
+
 
 
 
